--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,12 @@
         <div class="col-4"></div>
         <div class="col-4">
             <select name="action" id="action" class="form-select form-select-lg mb-3">
-                <option value="parse">parse</option>
                 <option value="eval">eval</option>
+                <option value="explain">explain</option>
+                <option value="parse">parse</option>
             </select>
             <select name="ver" id="ver">
-                <option value="0.1.0">0.1.0</option>
+                <option value="0.2.0">0.2.0</option>
             </select>
             <button name="exec" id="btnExec" class="btn btn-dark">Run</button>
             <button type="btnExport" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Export">
@@ -68,6 +69,9 @@
     </div>
     <div class="row" id="edit-area">
         <div class="col-12" id="editor"></div>
+    </div>
+    <div class="row mt-3" id="eval-result-div">
+        <pre id="eval-result" class="form-control"></pre>
     </div>
     <div class="row mt-3" id="env-div">
         <textarea id="env-data" class="form-control" placeholder="Environment data"></textarea>
@@ -172,10 +176,9 @@
 <script src="./ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 <script src="./js/d3.v3.min.js"></script>
 <script src="./js/ast-graph.js"></script>
-<script src="./js/ace.js"></script>
 <script src="./js/ion-bundle.min.js"></script>
 <script type="module">
-    import init, {parse} from './pkg-web/partiql_playground.js';
+    import init, {parse_to_str_result, eval_stmt, explain} from './pkg-web/partiql_playground.js';
 
     init();
 
@@ -192,6 +195,8 @@
     const copyToClipLabel = document.getElementById('copyToClip');
 
     const envDiv = document.getElementById('env-div');
+    const evalResultDiv = document.getElementById('eval-result-div');
+    const evalResult = document.getElementById('eval-result');
     const envData = document.getElementById('env-data');
     const graph = document.getElementById('graph');
     const rawjson = document.getElementById('raw-json')
@@ -212,9 +217,15 @@
     action.addEventListener('change', () => {
         if (action.value === 'parse') {
             envDiv.style.display = 'none';
-        } else {
+            evalResultDiv.style.display = 'none';
+        } else if (action.value == 'eval') {
+            evalResultDiv.style.display = 'none';
             resultArea.style.display = 'none';
             envDiv.style.display = 'block';
+        } else if (action.value == 'explain') {
+            evalResultDiv.style.display = 'none';
+            resultArea.style.display = 'none';
+            envDiv.style.display = 'none';
         }
     });
 
@@ -256,9 +267,10 @@
     }
 
     function cleanUp() {
-        action.value = 'parse';
+        action.value = 'eval';
         copyToClipLabel.innerText = 'copy to clipboard';
         envData.value = '';
+        evalResultDiv.value = '';
         resultArea.style.display = 'none';
     }
 
@@ -266,21 +278,34 @@
      * Exposes the entrypoint for execution based on the selected action.
      */
     function run() {
-        const res = parse(editor.getValue());
-        const resJson = JSON.parse(res);
+        if (action.value === 'parse') {
+            const res = parse_to_str_result(editor.getValue());
+            const resJson = JSON.parse(res);
 
-        resJson.version = version.value;
-        graph.innerHTML = '';
+            resJson.version = version.value;
+            graph.innerHTML = '';
 
-        $('#rendered-json').jsonViewer(resJson);
+            $('#rendered-json').jsonViewer(resJson);
 
-        rawjson.innerText = JSON.stringify(resJson);
-        copyToClipLabel.innerText = 'copy to clipboard';
-        resultArea.style.display = 'block';
+            rawjson.innerText = JSON.stringify(resJson);
+            copyToClipLabel.innerText = 'copy to clipboard';
+            resultArea.style.display = 'block';
 
-        btnJsonAst.click();
+            btnJsonAst.click();
 
-        drawGraph(JSON.stringify(JSON.parse(res).ast));
+            drawGraph(JSON.stringify(JSON.parse(res).ast));
+        } else if (action.value == 'eval') {
+            let envText = envData.value.trim() == '' ? 'null' : envData.value.replace(/\"/g, '\\\"');
+            let env = `{'env': ${envText}}`;
+            let result = eval_stmt(editor.getValue(), env);
+            evalResultDiv.style.display = 'block';
+            evalResult.innerHTML = result;
+
+            console.log(result);
+        } else if (action.value == 'explain') {
+            evalResultDiv.style.display = 'block';
+            evalResult.innerHTML = explain(editor.getValue());
+        }
     }
 </script>
 </body>
