--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,9 @@
     <div class="row mt-3" id="eval-result-div">
         <pre id="eval-result" class="form-control"></pre>
     </div>
+    <!--
+        TODO Provide a sample environment for evaluation: https://github.com/partiql/partiql-rust-playground/issues/7
+    -->
     <div class="row mt-3" id="env-div">
         <textarea id="env-data" class="form-control" placeholder="Environment data"></textarea>
     </div>
